crates/query-engine/tests/snapshots/tests__it_aggregate_function_albums.snap
---
source: crates/query-engine/tests/tests.rs
expression: result
---
SELECT
  row_to_json("universe") AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(row_to_json("aggregates"), '[]') AS "aggregates"
        FROM
          (
            SELECT
              max("Album"."ArtistId") AS "max_artist_id"
            FROM
              "public"."Album" AS "Album"
          ) AS "aggregates"
      ) AS "aggregates"
  ) AS "universe"

[]
