crates/query-engine/tests/snapshots/tests__it_select_where_string.snap
---
source: crates/query-engine/tests/tests.rs
expression: result
---
SELECT coalesce(json_agg(row_to_json("root")), '[]') AS "rows" FROM (SELECT "Album"."AlbumId" AS "AlbumId" FROM "public"."Album" AS "Album" WHERE ("Album"."Title" IN ($1, $2))) AS "root"

[(1, String("Mozart: Chamber Music")), (2, String("Something else"))]
