crates/query-engine/tests/snapshots/tests__it_simple_object_relationship.snap
---
source: crates/query-engine/tests/tests.rs
expression: result
---
SELECT row_to_json("universe") AS "universe" FROM (SELECT * FROM (SELECT coalesce(json_agg(row_to_json("rows")), '[]') AS "rows" FROM (SELECT "Artist"."Artist" AS "Artist" FROM "public"."Album" AS "Album" LEFT OUTER JOIN LATERAL (SELECT row_to_json("Artist") AS "Artist" FROM (SELECT * FROM (SELECT coalesce(json_agg(row_to_json("rows")), '[]') AS "rows" FROM (SELECT "Artist"."Name" AS "Name" FROM "public"."Artist" AS "Artist" WHERE (true AND ("Album"."ArtistId" = "Artist"."ArtistId"))) AS "rows") AS "rows") AS "Artist") AS "Artist" ON ('true')  LIMIT 5) AS "rows") AS "rows") AS "universe"

[]
