crates/query-engine/tests/snapshots/tests__nested_aggregates.snap
---
source: crates/query-engine/tests/tests.rs
expression: result
---
SELECT
  row_to_json("universe") AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "Artist"."Name" AS "Name",
              "Albums"."Albums" AS "Albums"
            FROM
              "public"."Artist" AS "Artist"
              LEFT OUTER JOIN LATERAL (
                SELECT
                  row_to_json("Albums") AS "Albums"
                FROM
                  (
                    SELECT
                      *
                    FROM
                      (
                        SELECT
                          coalesce(json_agg(row_to_json("rows")), '[]') AS "rows"
                        FROM
                          (
                            SELECT
                              "Album"."Title" AS "Title"
                            FROM
                              "public"."Album" AS "Album"
                            WHERE
                              (
                                true
                                AND ("Artist"."ArtistId" = "Album"."ArtistId")
                              )
                          ) AS "rows"
                      ) AS "rows"
                      CROSS JOIN (
                        SELECT
                          coalesce(row_to_json("aggregates"), '[]') AS "aggregates"
                        FROM
                          (
                            SELECT
                              COUNT(*) AS "how_many_albums"
                            FROM
                              "public"."Album" AS "Album"
                            WHERE
                              (
                                true
                                AND ("Artist"."ArtistId" = "Album"."ArtistId")
                              )
                          ) AS "aggregates"
                      ) AS "aggregates"
                  ) AS "Albums"
              ) AS "Albums" ON ('true')
            LIMIT
              5 OFFSET 1
          ) AS "rows"
      ) AS "rows"
  ) AS "universe"

[]
