crates/query-engine/tests/snapshots/tests__sorting_by_nested_relationship_column.snap
---
source: crates/query-engine/tests/tests.rs
expression: result
---
SELECT coalesce(json_agg(row_to_json("root")), '[]') AS "rows" FROM (SELECT "Track"."Name" AS "Name" FROM "public"."Track" AS "Track" LEFT OUTER JOIN LATERAL (SELECT "Album"."AlbumId" AS "AlbumId", "Album"."ArtistId" AS "ArtistId" FROM "Album" AS "Album" WHERE (true AND ("Track"."AlbumId" = "Album"."AlbumId"))) AS "Album" ON ('true')  LEFT OUTER JOIN LATERAL (SELECT "Artist"."ArtistId" AS "ArtistId", "Artist"."Name" AS "Name" FROM "Artist" AS "Artist" WHERE (true AND ("Album"."ArtistId" = "Artist"."ArtistId"))) AS "Artist" ON ('true')  ORDER BY "Artist"."Name" ASC  LIMIT 5 OFFSET 3) AS "root"

[]
